bootcamp-resources/references/multi-tenancy/reference/teams/team-a/manifests/policies/allow-ingress-monitoring.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-monitoring-team-a
  namespace: team-a-monitoring
spec:
  endpointSelector: { }
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "app-1"
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": "app-2"
